prevent flicker in responsive tabs
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12507 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/stylesheet.css
+++ b/templates/tpl_modified_responsive/stylesheet.css
@@ -222,8 +222,14 @@
   padding:0;
 }
 /* prevent flicker in responsive tabs */
-ul.resp-tabs-list{
+#horizontalAccordion ul.resp-tabs-list {
   display:none !important;
+}
+#horizontalTab ul.resp-tabs-list { 
+  list-style-type:none;  
+}
+#horizontalTab ul.resp-tabs-list li {
+  display: inline-block;
 }
 
 body {
